<resources>
    <string name="app_name">BUSHERS TVSDT</string>
    <string name="app_description">TV Station Debugging Tool</string>
    <string name="devices">USB Tools</string>
    <string name="clear">Clear</string>
    <string name="newline">Newline Mode</string>
    <string name="refresh_devices">Refresh Tools</string>
    <string name="baud_rate">Baud rate</string>
    <string name="rts" translatable="false">RTS</string>
    <string name="cts" translatable="false">CTS</string>
    <string name="dtr" translatable="false">DTR</string>
    <string name="dsr" translatable="false">DSR</string>
    <string name="cd" translatable="false">CD</string>
    <string name="ri" translatable="false">RI</string>
    <string name="content_description">Send</string>
    <string name="no_devices_found">No USB tools found</string>
    <string name="send_text">Write Text to Send</string>
    <string name="no_driver">no driver</string>
    <string name="key_access_1">KEY ACCESS 1</string>
    <string name="key_access_2">KEY ACCESS 2</string>
    <string name="bootlogo">LOGO ON</string>
    <string name="destroy_logo">LOGO OFF</string>
    <string name="panel_init">FORCE BACKLIGHT</string>
    <string name="usbstart">BACKUP TO USB</string>
    <string name="restore_backup">RESTORE BACKUP</string>
    <string name="audio_preinit">DIAGNOSE SOUND</string>
    <string name="custar">FIRMWARE UPGRADE</string>
    <string name="mmcinfo">MEMORY INFORMATION</string>
    <string name="reset">RESET</string>
    <string name="todo">TODO</string>
    <string name="contact">WhatsApp +573017578191 by Eng. Luis Bustamante</string>

</resources>
